--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="tip-amount">
       <div class="label">Tip Amount</div>
       <div class="dollars">
-        <sup>$</sup>4.02
+        <sup>$</sup><span id="tip-amount">0</span>
       </div>
     </div>
 
@@ -25,7 +25,7 @@
     <div class="total-per-person">
       <div class="label">Total Per Person</div>
       <div class="dollars">
-        <sup>$</sup>12.02
+        <sup>$</sup><span id="total-per-person">0</span>
       </div>
     </div>
 
@@ -33,7 +33,7 @@
       <!-- елемент для введення суми рахунку -->
       <div class="bill-amount">
         <div class="field">
-          <input type="text" name="bill-amount" value="102.02" maxlength="7">
+          <input type="text" id="bill-amount" name="bill-amount" value="9.99">
         </div>
         <div class="label">Bill Amount</div>
       </div>
@@ -41,7 +41,7 @@
       <!-- елемент для введення кількості осіб -->
       <div class="number-of-people">
         <div class="field">
-          <input type="text" name="number-of-people" value="3" maxlength="2">
+          <input type="text" id="number-of-people" name="number-of-people" value="1">
         </div>
         <div class="label">Number of People</div>
       </div>
@@ -56,7 +56,7 @@
       </div>
 
       <div>
-        <input type="radio" name="tip" value="10%" id="ten-percent">
+        <input type="radio" name="tip" checked value="10%" id="ten-percent">
         <label for="ten-percent">10%</label>
       </div>
 
@@ -73,9 +73,10 @@
 
     <!-- кнопка обрахування -->
     <div class="button-wrapper">
-      <button>Calculate</button>
+      <button id="calculate">Calculate</button>
     </div>
   </div>
+  <script src="app.js"></script>
 </body>
 
 </html>
